turtleart.kerr40.Kerr40.scala.error
Compilation error:
Kerr40:2: error: value avance is not a member of Unit
  for (i<-1 to 8) {avance(30);recule(30);droite(45)} avance(30);droite(30);
                                                     ^